--- a/css/checkout.css
+++ b/css/checkout.css
@@ -12,6 +12,7 @@ a {
 
 .navbar-clr {
     background-color: white !important;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .top {
@@ -24,19 +25,6 @@ a {
 
 .border {
     border: 5px solid palevioletred;
-}
-
-.bor {
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.bar {
-    background-color: white;
-    width: 100%;
-    height: 60px;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .footer {
@@ -55,33 +43,44 @@ a {
 	margin: 0 auto;
 }
 
-.form-control {
-    width: 500px;
-}
-
 .btn-pesan {
     background-color: #7784EE;
     color: white;
 }
 
-.box {
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    padding: 4% 4% 4% 4%;
+.card {
+    box-shadow: 1px 1px 8px 1px rgba(90, 90, 90, 0.75);
 }
 
-.btn-hub {
-    background-color: #EAEEF6;
-    color: #7784EE;
-    border: 1px solid #7784EE;
-    border-radius: 5px;
-    padding: 1% 1% 1% 1%;
+.box {
+    margin-top: 1%;
+    margin-bottom: 1%;
+    background-color: #dad9d9;
+    width: 100%;
+    padding: 2% 2% 2% 2%;
+    display: none;
+    margin: 0 auto;
+}
+
+.success-box {
+    background-color: #DCF3EB;
+    width: 500px;
+    color: #10673E;
+    padding: 5%;
+    border: 0.5px solid #34A770;
+    border-radius: 8px;
 }
 
 @media only screen and (max-width: 700px) {
-    .form-control {
-        width: 400px;
-        margin-top: 5%;
+    .success-box {
+        width: 90%;
+    }
+
+    h5 {
+        text-align: center;
+    }
+
+    textarea {
+        width: 100%;
     }
 }
