--- a/css/gabungmitra.css
+++ b/css/gabungmitra.css
@@ -27,9 +27,9 @@ a {
 }
 
 .bar {
-    background-color: white;
-    width: 100%;
-    height: 60px;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
