--- a/css/jasabaru.css
+++ b/css/jasabaru.css
@@ -26,15 +26,10 @@ a {
     border: 5px solid palevioletred;
 }
 
-.bor {
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
 .bar {
-    background-color: white;
-    width: 100%;
-    height: 60px;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
@@ -55,8 +50,30 @@ a {
 	margin: 0 auto;
 }
 
-.form-control {
-    width: 500px;
+.card {
+    padding: 0 3% 3% 3%;
+    width: 80%;
+    box-shadow: 1px 1px 8px 1px rgba(90, 90, 90, 0.75);
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+    border: 1px solid rgb(165, 165, 165);
+}
+
+select {
+    width: 100%;
+}
+
+.btn-batal {
+    background-color: #EAEEF6;
+    border: 1px solid #7784EE;
+    color: #7784EE;
+}
+
+.btn-area {
+    width: 80%;
 }
 
 .btn-pesan {
@@ -64,24 +81,10 @@ a {
     color: white;
 }
 
-.box {
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    padding: 4% 4% 4% 4%;
-}
-
-.btn-hub {
-    background-color: #EAEEF6;
-    color: #7784EE;
-    border: 1px solid #7784EE;
-    border-radius: 5px;
-    padding: 1% 1% 1% 1%;
-}
-
-@media only screen and (max-width: 700px) {
-    .form-control {
-        width: 400px;
-        margin-top: 5%;
-    }
+.file-box {
+    border: 1px solid rgb(105, 158, 182); 
+    border-radius: 10px; 
+    width: 160px;
+    height: 140px;
+    /* cursor: pointer; */
 }
