--- a/css/jelajahi.css
+++ b/css/jelajahi.css
@@ -42,10 +42,21 @@ a {
 }
 
 .footer {
+    padding-top: 10px;
     text-align: center !important;
     color: #979797;
     width: 100%;
     height: 50px;
     bottom: 0;
     background-color: white;
+}
+
+@media only screen and (max-width: 700px) {
+    body {
+        text-align: center;
+    }
+
+    .reverse {
+        flex-direction: column-reverse;
+    }
 }
