--- a/css/profile.css
+++ b/css/profile.css
@@ -1,9 +1,7 @@
 body {
-
     font-family: 'Poppins', sans-serif;
     width: 100%;
     color: #000000;
-
 }
 
 a {
@@ -24,11 +22,6 @@ a {
 
 .border {
     border: 5px solid palevioletred;
-}
-
-.bor {
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .bar {
@@ -55,29 +48,35 @@ a {
 	margin: 0 auto;
 }
 
+.box {
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    padding: 4% 4% 4% 4%;
+    /* margin: 5%; */
+}
+
 .form-control {
     width: 500px;
 }
 
-.btn-pesan {
-    background-color: #7784EE;
+.btn-status1 {
+    background-color: #FFF8EF;
+    color: #E18109;
+    border: 1px solid #FBA63C;
+}
+
+.btn-status2 {
+    background-color: #DCF3EB;
+    color: #13854E;
+    border: 1px solid #34A770;
+}
+
+.btn-selesai {
+    background-color: #46BD84;
     color: white;
 }
 
-.box {
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    padding: 4% 4% 4% 4%;
-}
-
-.btn-hub {
-    background-color: #EAEEF6;
-    color: #7784EE;
-    border: 1px solid #7784EE;
-    border-radius: 5px;
-    padding: 1% 1% 1% 1%;
-}
 
 @media only screen and (max-width: 700px) {
     .form-control {
