--- a/css/gabungmitra.css
+++ b/css/gabungmitra.css
@@ -38,15 +38,6 @@ a {
     font-size: 14px;
 }
 
-.footer {
-    text-align: center !important;
-    color: #979797;
-    width: 100%;
-    height: 50px;
-    bottom: 0;
-    background-color: white;
-}
-
 .btn-next {
     background-color: #7784EE;
     color: white;
@@ -54,7 +45,7 @@ a {
 }
 
 .card-clr {
-    width: 40%;
+    width: 450px;
     color: #3387B7;
     background-color: #E9F1F5;
     border: none;
