lagi lagi update

--- a/css/profile.css
+++ b/css/profile.css
@@ -77,6 +77,23 @@ a {
     color: white;
 }
 
+.chatBubble1 {
+    background-color: #59aad0;
+    color: #000000;
+    padding: 5px 5px 5px 5px;
+    width: 80%;
+    border-radius: 10px;
+}
+
+.chatBubble2 {
+    background-color: #59aad0;
+    color: #000000;
+    padding: 5px 5px 5px 5px;
+    width: 80%;
+    border-radius: 10px;
+    margin-left: auto;
+}
+
 
 @media only screen and (max-width: 700px) {
     .form-control {
